[gd_scene load_steps=15 format=2]

[ext_resource path="res://Shop.gd" type="Script" id=1]
[ext_resource path="res://Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/source-code-pro/source-code-pro-2.010R-ro-1.030R-it/TTF/SourceCodePro-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Space.gd" type="Script" id=3]
[ext_resource path="res://Shoot.png" type="Texture" id=4]
[ext_resource path="res://Space.png" type="Texture" id=5]
[ext_resource path="res://TotalScore.gd" type="Script" id=6]
[ext_resource path="res://Arrows.gd" type="Script" id=7]
[ext_resource path="res://Rapunzel Shoot.png" type="Texture" id=8]
[ext_resource path="res://Frog.png" type="Texture" id=9]
[ext_resource path="res://Maximus.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=47]
size = 20
font_data = ExtResource( 2 )

[node name="Shop" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 960, 540 )
texture = ExtResource( 5 )

[node name="Title" type="Label" parent="."]
margin_left = 88.0
margin_top = 21.0
margin_right = 248.0
margin_bottom = 42.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 2 )
text = "Character Select"

[node name="Upgrades" type="Label" parent="."]
visible = false
margin_left = 919.0
margin_top = 21.0
margin_right = 999.0
margin_bottom = 42.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 2 )
text = "Upgrades"

[node name="RapunzelTag" type="Label" parent="."]
margin_left = 430.0
margin_top = 230.0
margin_right = 510.0
margin_bottom = 251.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 3 )
text = "Rapunzel"

[node name="FlynnTag" type="Label" parent="."]
margin_left = 90.0
margin_top = 230.0
margin_right = 148.0
margin_bottom = 251.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 1 )
text = "Flynn"

[node name="MaximusTag" type="Label" parent="."]
margin_left = 57.0
margin_top = 525.0
margin_right = 127.0
margin_bottom = 546.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 1 )
text = "Maximus"

[node name="Mystery Tag" type="Label" parent="."]
margin_left = 525.0
margin_top = 532.0
margin_right = 585.0
margin_bottom = 553.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 1 )
text = "???"

[node name="TotalScore" type="Label" parent="."]
visible = false
margin_left = 950.0
margin_top = 110.0
margin_right = 1094.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 47 )
text = "Points:"
script = ExtResource( 6 )

[node name="Arrows" type="Label" parent="."]
margin_left = 650.0
margin_top = 520.0
margin_right = 660.0
margin_bottom = 541.0
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 1 )
text = "<"
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="Arrows"]
one_shot = true

[node name="Timer2" type="Timer" parent="Arrows"]
one_shot = true

[node name="Flynn" type="Sprite" parent="."]
position = Vector2( 194, 425 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="Maximus" type="Sprite" parent="."]
position = Vector2( 206, 697 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Rapunzel" type="Sprite" parent="."]
position = Vector2( 582, 419 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Frog" type="Sprite" parent="."]
position = Vector2( 590, 711 )
texture = ExtResource( 9 )

[connection signal="timeout" from="Arrows/Timer" to="Arrows" method="_on_Timer_timeout"]
[connection signal="timeout" from="Arrows/Timer2" to="Arrows" method="_on_Timer2_timeout"]
